# radixdlt-scrypto

./: Cargo.toml  generate-runtime-fuzzer-test-cases.py
.devcontainer/: Dockerfile  devcontainer.json
assets/: faucet.wasm  flash_loan.wasm  genesis_helper.rpd  genesis_helper.wasm  global_n_owned.wasm  kv_store.wasm  large_package.rpd  large_package.wasm  max_transaction.wasm  metadata.wasm  radiswap.rpd  radiswap.wasm  test_environment.wasm
monkey-tests/tests/: fuzz_kernel.rs
radix-common/src/constants/: transaction_execution.rs  wasm.rs
radix-engine/: Cargo.toml
radix-engine-common/src/address/: mod.rs
radix-engine-common/src/constants/: native_addresses.rs
radix-engine-common/src/types/: node_and_substate.rs
radix-engine-interface/src/types/: wasm.rs
radix-engine-stores/src/: memory_db.rs
radix-engine-tests/: Cargo.toml
radix-engine-tests/tests/application/: determinism.rs  stake_reconciliation.rs
radix-engine-tests/tests/blueprints/: static_dependencies.rs
radix-engine-tests/tests/db/: jmt_consistency.rs
radix-engine-tests/tests/kernel/: kernel.rs  kernel_open_substate.rs  panics.rs
radix-engine-tests/tests/system/: consensus_manager.rs  external_bridge.rs  metadata_component.rs  package_schema.rs
radix-engine-tests/tests/vm/: native_vm.rs
radix-engine/src/blueprints/package/: package.rs
radix-engine/src/blueprints/transaction_processor/: tx_processor.rs
radix-engine/src/kernel/: id_allocator.rs
radix-engine/src/system/: system.rs  system_type_checker.rs
radix-engine/src/transaction/: transaction_executor.rs  transaction_receipt.rs
radix-engine/src/vm/: native_vm.rs  scrypto_vm.rs  vm.rs
radix-engine/src/vm/wasm/: fuzzer.rs  mod.rs  (+3 more)
radix-runtime-fuzzer/: .gitignore  Cargo.toml  README.md
radix-runtime-fuzzer-common/: Cargo.toml
radix-runtime-fuzzer-common/src/: fuzzer.rs  logger.rs  transaction.rs
radix-runtime-fuzzer-derive/: Cargo.toml  README.md
radix-runtime-fuzzer-derive/src/: lib.rs
radix-runtime-fuzzer-derive/tests/: runtime.rs
radix-runtime-fuzzer-executor/: Cargo.toml  crash-0bdb2efece8bba2625c4d59fe85f076cb947d51d  log.txt  oom-28cffd773992197088ad5a2d04b8a13d9d836775
radix-runtime-fuzzer-executor/src/: fuzz_runner.rs  lib.rs  main.rs
radix-runtime-fuzzer-tools/: .gitignore  Cargo.toml  README.md  build.sh
radix-runtime-fuzzer/src/: fuzz_runner.rs  lib.rs  logger.rs  transaction.rs
sbor/src/: decoder.rs  encoder.rs  value.rs
scrypto-test/: Cargo.toml
scrypto-test/src/environment/: builder.rs
scrypto-test/src/ledger_simulator/: ledger_simulator.rs
scrypto-test/src/runner/: test_runner.rs
scrypto-wasm-fuzzer/: Cargo.toml  HONGGFUZZ.REPORT.TXT  a.out  build.rs  cpp_test.cpp  rust_test.rs
scrypto-wasm-fuzzer/fuzz_blueprint/src/: lib.rs
scrypto-wasm-fuzzer/out2/default/: fuzz_bitmap  fuzzer_setup  fuzzer_stats  plot_data
scrypto-wasm-fuzzer/out2/default/queue/: id:000003,src:000000,time:2042,execs:3983,op:havoc,rep:16,+cov  id:000005,src:000003,time:9763,execs:19115,op:havoc,rep:2,+cov  id:000006,src:000003,time:9846,execs:19278,op:havoc,rep:2,+cov  id:000007,src:000003,time:10011,execs:19603,op:havoc,rep:2,+cov  id:000008,src:000003,time:10025,execs:19631,op:havoc,rep:2,+cov  id:000009,src:000003,time:10167,execs:19911,op:havoc,rep:2,+cov  id:000010,src:000003,time:10579,execs:20722,op:havoc,rep:4,+cov  id:000011,src:000003,time:10745,execs:21047,op:havoc,rep:4,+cov  id:000012,src:000003,time:11513,execs:22559,op:havoc,rep:2,+cov  id:000013,src:000003,time:11995,execs:23511,op:havoc,rep:4,+cov  id:000014,src:000003,time:12348,execs:24209,op:havoc,rep:4,+cov  id:000015,src:000003,time:13377,execs:26221,op:havoc,rep:2,+cov  id:000018,src:000003,time:14762,execs:28957,op:havoc,rep:2,+cov  id:000019,src:000003,time:15065,execs:29556,op:havoc,rep:16,+cov  id:000020,src:000003,time:16290,execs:31975,op:havoc,rep:2,+cov  id:000021,src:000003,time:18651,execs:36343,op:havoc,rep:2,+cov  id:000022,src:000003,time:18855,execs:36748,op:havoc,rep:2,+cov  id:000023,src:000003,time:19743,execs:38512,op:havoc,rep:4  id:000024,src:000003,time:22236,execs:43468,op:havoc,rep:8,+cov  id:000025,src:000003,time:22995,execs:44931,op:havoc,rep:2,+cov  id:000026,src:000003,time:23278,execs:45493,op:havoc,rep:2,+cov  id:000027,src:000020,time:29265,execs:57202,op:havoc,rep:2  id:000029,src:000027,time:141713,execs:274404,op:havoc,rep:2,+cov  id:000030,src:000029,time:142472,execs:275816,op:havoc,rep:2,+cov  id:000032,src:000029,time:143693,execs:278061,op:havoc,rep:4  id:000033,src:000029,time:144866,execs:280235,op:havoc,rep:2,+cov  id:000034,src:000029,time:150660,execs:290851,op:havoc,rep:4,+cov  id:000035,src:000029+000015,time:161299,execs:310752,op:splice,rep:4,+cov  id:000036,src:000034,time:162017,execs:312167,op:havoc,rep:2,+cov  id:000037,src:000034,time:162024,execs:312181,op:havoc,rep:2,+cov  id:000038,src:000034,time:162150,execs:312429,op:havoc,rep:2,+cov  id:000039,src:000034,time:162389,execs:312899,op:havoc,rep:2,+cov  id:000040,src:000034,time:162519,execs:313156,op:havoc,rep:2,+cov  id:000041,src:000034,time:162579,execs:313274,op:havoc,rep:2  id:000042,src:000034,time:163355,execs:314802,op:havoc,rep:32,+cov  id:000043,src:000034,time:163454,execs:314997,op:havoc,rep:64,+cov  id:000044,src:000034,time:163662,execs:315404,op:havoc,rep:2,+cov  id:000045,src:000034,time:164061,execs:316191,op:havoc,rep:64,+cov  id:000046,src:000034,time:169811,execs:327451,op:havoc,rep:2,+cov  id:000047,src:000034,time:172322,execs:332399,op:havoc,rep:8,+cov  (+32 more)
scrypto-wasm-fuzzer/src/: lib.rs
scrypto/src/: lib.rs
scrypto/src/component/: stubs.rs
simulator/src/resim/: addressing.rs  cmd_call_function.rs  cmd_call_method.rs  cmd_mint.rs  cmd_new_account.rs  cmd_new_simple_badge.rs  cmd_publish.rs  cmd_reset_faucet.rs  cmd_show_configs.rs  cmd_show_ledger.rs  cmd_transfer.rs  config.rs  dumper.rs  mod.rs
simulator/src/rtmc/: mod.rs
simulator/src/rtmd/: mod.rs
simulator/src/utils/: common_instructions.rs  resource_specifier.rs
substate-store-impls/src/: rocks_db.rs
transaction/src/model/: executable.rs
(+5 files in other folders)
