[package]
name = "radix-runtime-fuzzer-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
radix-runtime-fuzzer-common = { path = "../radix-runtime-fuzzer-common" }
proc-macro2 = { version = "1.0.38" }
syn = { git = "https://github.com/dtolnay/syn.git", tag = "1.0.93", features = ["full", "extra-traits"] }
quote = { version = "1.0.18" }
heck = "0.4.1"

[features]
radix_runtime_logger = ["radix-runtime-fuzzer-common/radix_runtime_logger"]
radix_runtime_fuzzing = ["radix-runtime-fuzzer-common/radix_runtime_fuzzing"]