[package]
name = "radix-runtime-fuzzer-executor"
version = "0.1.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
proc-macro2 = { version = "1.0.38" }
syn = { git = "https://github.com/dtolnay/syn.git", tag = "1.0.93", features = ["full", "extra-traits"] }
quote = { version = "1.0.18" }
sbor = { path = "../sbor" }
transaction = { path = "../transaction" }
once_cell = "1.19.0"
hex = "0.4.3"
radix-engine-common = { path = "../radix-engine-common", default-features = false, features = ["radix_engine_fuzzing"] }
radix-runtime-fuzzer = { path = "../radix-runtime-fuzzer" }
radix-engine = { path = "../radix-engine", features = ["radix_engine_fuzzing"]}
radix-engine-store-interface = { path = "../radix-engine-store-interface" }
radix-engine-stores = { path = "../radix-engine-stores" }
scrypto-test = { path = "../scrypto-test" }
libfuzzer-sys = { version = "0.4" }

[profile.release]
debug = true

[[bin]]
name = "executor"
path = "bin/executor.rs"
bench = false

[[bin]]
name = "extractor"
path = "bin/extractor.rs"
bench = false

[[bin]]
name = "fuzzer"
path = "bin/fuzzer.rs"
bench = false
