[package]
name = "radix-runtime-fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
sbor = { path = "../sbor" }
transaction = { path = "../transaction" }
radix-engine-common = { path = "../radix-engine-common", default-features = false }
syn = { git = "https://github.com/dtolnay/syn.git", tag = "1.0.93", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0.38" }
quote = { version = "1.0.18" }
once_cell = "1.19.0"
hex = "0.4.3"

[features]
runtime_logger = []
radix_engine_fuzzing = [
    "sbor/radix_engine_fuzzing",
    "transaction/radix_engine_fuzzing",
    "radix-engine-common/radix_engine_fuzzing",
]
