[package]
name = "scrypto-wasm-fuzzer"
version = "1.2.0-dev"
edition = "2021"
build = "build.rs"

[dependencies]
radix-native-sdk = { workspace = true }
sbor = { workspace = true }
radix-engine = { workspace = true, features = ["wasm_fuzzing"] }
radix-engine-interface = { workspace = true }
radix-common = { workspace = true }
radix-substate-store-interface = { workspace = true }
radix-substate-store-impls = { workspace = true }
radix-substate-store-queries = { workspace = true }
radix-transactions = { workspace = true }
radix-transaction-scenarios = { workspace = true }
radix-blueprint-schema-init = { workspace = true }
radix-rust = { workspace = true }
radix-engine-profiling = { workspace = true, optional = true, features = ["resource_tracker"]}
radix-engine-profiling-derive = { workspace = true }
scrypto-test = { workspace = true }
scrypto-compiler = { workspace = true }
lazy_static = { workspace = true }
libc = "0.2.153"

[[bin]]
name = "wasm_fuzzer"
path = "bin/wasm_fuzzer.rs"

[features]
# You should enable either `std` or `alloc`
default = ["std"]
std = ["sbor/std", "radix-transactions/std", "radix-blueprint-schema-init/std", "radix-common/std", "radix-transaction-scenarios/std", "radix-engine/std", "radix-engine/moka", "radix-engine-interface/std", "radix-substate-store-impls/std", "radix-substate-store-interface/std", "radix-substate-store-queries/std", "radix-rust/std"]
